--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-todavía no está XD
+<!doctype html>
+<html>
+
+  <head>
+     <meta charset="utf-8"/>
+     <meta name="description" content="Resumen del contenido de la página">   
+     <title>Título de la página</title>
+     <link rel="stylesheet" href="css/estilokar.css" type="text/css"/>
+     <style type="text/css">
+      .nav > li > a {
+        color:blueviolet;
+        font-size: 2em;
+      } 
+     </style>
+     /*<script type="text/javascript">
+           código javaScript 
+     </script>
+     <script type="text/javascript" src="js/codigo.js"></script>*/
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+
+  <body>
+      <header>cabecera</header>
+      <nav>
+          enlace1
+          enlace2
+      </nav>
+      <main>
+         <section>
+            <article> contenido </article>
+            <article> contenido </article>
+         </section>
+      </main>
+      <footer> © pie de la página </footer>
+  </body>
+
+</html>
