Update image source and grid layout in index.html and output.css

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           </span>
         </div>
         <div class="contacto__foto">
-          <img src="https://via.placeholder.com/150" alt="Foto de contacto">
+          <img src="image.png" alt="Foto de contacto">
         </div>
 
       </div>
