Ejercicio de Portafolio personal

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,42 @@
         <meta name="viewport" content="width=device-width"
         <title>Portafolio de mi persona</title>
 
+        <style>
+            h1 {
+                color: rgb(52, 78, 229);
+                font-family: 'Trebuchet MS';
+            }
+
+            h2{
+                color: rgb(149, 83, 254);
+                font-family: 'Trebuchet MS'; 
+            }
+
+            h3{
+                color: rgb(235, 84, 167);
+                font-family: 'Trebuchet MS';
+            }
+
+            body {
+                background: rgb(114, 199, 255);
+                font-family: 'Helvetica Neue', 'Segoe UI', Roboto,
+                 'Georgia', 'Arial', sans-serif;  
+            }
+
+            .link {
+                color:rgb(13, 114, 121);
+            }
+
+            .link:hover {
+                border: 8px solid rgb(13, 114, 121);
+            }
+
+            .link:active {
+                border: 8px solid rgb(239, 84, 154);
+            }
+
+        </style>
+
     </head>
     <body>
         <header>
@@ -23,33 +59,33 @@
         igual que adquirir experiencia en la misma puesto que me seria de gran utilidad
         a futuro por la carrera que deseo estudiar.</p>
         
-        <h4>Trabajos</h4>
+        <h3>Trabajos</h3>
         <ul>
            <li>Utilizacion de Moodle, Gdevelop, cables.gl, IbisPaint, Gimp para
             elaboracion de un sitio web.</li>
            <Li>Uso de Guion instruccional, aprendizaje significativo, gamificacion,
             storyboards, guion literario, guion tecnico, bitacoras, referencias y
             argumento en trabajo escrito para elaboracion de un sitio web.</Li>
-            <li>Documentos con los recursos utilizadps por cada proyecto;</li>
+            <li>Documentos con los recursos utilizados por cada proyecto;</li>
             <li>Proyecto 1:</li>
             <nav>
-                <a href="https://docs.google.com/document/d/1gDIAUTF8PVl6baqd9W3Z90YrjjKPBHEJU2uzKtuSnbI/edit?usp=sharing" target="_blank"
+                <a class="link" href="https://docs.google.com/document/d/1gDIAUTF8PVl6baqd9W3Z90YrjjKPBHEJU2uzKtuSnbI/edit?usp=sharing" target="_blank"
                 rel="noreferrer">Drive</a>
             </nav>
             <li>Proyecto 2:</li>
             <nav>
-                <a href="https://docs.google.com/document/d/1HwSn6qH3N5A23fjjNCeIH-6ap6EI1y_4A848aoSgHKg/edit?usp=sharing" target="_blank"
+                <a class="link" href="https://docs.google.com/document/d/1HwSn6qH3N5A23fjjNCeIH-6ap6EI1y_4A848aoSgHKg/edit?usp=sharing" target="_blank"
                 rel="noreferrer">Drive</a>
             </nav>
             <li>Proyecto 3:</li>
             <nav>
-                <a href="https://docs.google.com/document/d/1DcPG4gFyBkB2uLFmoocNMwI7XgViV3KV/edit?usp=sharing&ouid=117136487009513993591&rtpof=true&sd=true" target="_blank"
+                <a class="link" href="https://docs.google.com/document/d/1DcPG4gFyBkB2uLFmoocNMwI7XgViV3KV/edit?usp=sharing&ouid=117136487009513993591&rtpof=true&sd=true" target="_blank"
                 rel="noreferrer">Drive</a>
 
             </nav>
             <li>Proyecto 4:</li>
             <nav>
-                <a href="https://www.canva.com/design/DAGC-Y2H-qE/MKGBFm8D_8s37MADBfB2NQ/edit?utm_content=DAGC-Y2H-qE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"
+                <a class="link" href="https://www.canva.com/design/DAGC-Y2H-qE/MKGBFm8D_8s37MADBfB2NQ/edit?utm_content=DAGC-Y2H-qE&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"
                 rel="noreferrer">Canva</a>
             </nav>
         </ul>
@@ -58,25 +94,26 @@
         width=350
         height=200
         title="Captura del Sitio Ensayo Academico" 
-        alt="Captura de pantalla 
-        del sitio educativo Ensayo Academico Desarrollado con Moodle" 
-        src="/imagenes/Paki.png"
-        <p2>Enlace de videojuego del sitio hecho con Gdevelop:</p2>
+        alt="Captura de pantalla del sitio educativo Ensayo Academico Desarrollado con Moodle" 
+        src="/imagenes/Paki.png"/>
+
+        <p>Enlace de videojuego del sitio hecho con Gdevelop:</p>
         <nav>
             <a href="https://gd.games/instant-builds/698fdad7-cb9f-4e15-9820-c4dafc0dc55a" target="_blank"
             rel="noreferrer">Gdevelop</a>
 
         </nav>
-        <h1>Mi contacto</h1>
+        <h3>Mi contacto</h3>
         <a href="gabrielaarrazola322@alumno.cch.unam.mx">Enviame un correo</a>
         <a href="gabearrazola1606@gmail.com">o a mi correo personal</a>
         <a href="wwhatsapp: +5511982522">Telefono</a>
+        
         <img
         width=250
-        height=250
-        tITLE="Foto de como me veo "
+        height=280
+        title="Foto de como me veo"
         alt="Una imagen de mi persona Gariela Arrazola"
-        src="/imagenes/y02.png"
+        src="/imagenes/y02.png"/>
 
     </main>
 
@@ -84,45 +121,3 @@
 
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
