actualizacion del html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
-<html></html>
+<h1 
+style="color: rgb(32, 9, 54);
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+text-align: center;"
+>Portafolio de mi persona</h1>
+
+<h2
+style="color: rgb(52, 17, 85);
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
+>Resumen de mi persona</h2>
+<p 
+style="font-family: Arial, Helvetica, sans-serif;
+text-align: justify;"
+>Soy Pablo Alexander Altamirano Hernandez, curse el ETE en ><strong>Desarrollo de Sitios y Materiales Educativos WEB</strong> en el plantel <strong>CCH Vallejo</strong>durante el periodo <strong>2024-1</strong> en el cual 
+ adquiri distintos conocimientos y me capacite como diseñador de <strong>Front-end</strong>, aprendiendo a realizar actividades y materiales educativos con el fin de que sean utilizados por los mismos alumnos del plantel,
+durante mi cursamiente en el ETE, donde con apoyo del profesor creamos un sitio WEB educativo con diferentes recuersos visuales y didacticos; como videos, actividade de evaluacion y un videojuego</p>
+
+<h2
+style="color: rgb(52, 17, 85);
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
+>Trabajos</h2>
+<p
+style="font-family: Arial, Helvetica, sans-serif;
+text-align: justify;"
+>Mis trabajos iniciaron siendo maquetados y planificados con ayuda de mis compañeros de equipo, se planificaban en documentos donde se especificaban las caracteristicas y estetica de nuestro sitio web; al igual de 
+que tema abarcara el sitio el cual fue "Ensayo Académico", posterior a esto se realizaron actividades y materiales que se integraron a el sitio, como lo pueden ver y visitar en el siguiente link: <strong><a href="https://nahui-ocelotl.com/dsim/course/view.php?id=11">Ensayo Académico</a></strong>   
+</p> 
+
+<div style="text-align: center;" >
+    <img  
+    src="Imagenes y videos/portada enca.jpg" width="1000" height="600" alt="">
+</div>
+
+<p
+style="font-family: Arial, Helvetica, sans-serif;
+text-align: justify;"
+>Este sitio web abarca temas acerca de el Ensayo Académico, el cual fue escogido para poder explicarlo de una forma mas visual y didactica. Por lo cual se empleo una paleta de colores pasteles, con el fin de que
+fuera mas amigable a los ojos de los estudiantes que visitaran el sitio.
+El cual tambien es un sitio con una tematica representativa acerca del plantel Vallejo, como lo son los Ajolotes. Donde en el sitio un Ajolote llamado "Paki" es quien te guia a travez de los textos de la explicacion
+del tema.
+</p>
+
+<p
+style="font-family: Arial, Helvetica, sans-serif;
+text-align: justify;"
+>Tambien en tematica a esto se realizaron dos pequeñas capsulas que ayudan a el reforzamiento y entendimiento del tema, donde los protagonistas nuevamente son "Paki" y un pequeño Ajolote llamado "Koli"; donde este
+ultimo es un niño muy curioso y sus curiosidades son resueltas por su maestro "Paki"</p>
+
+<p
+style="font-family: Arial, Helvetica, sans-serif;
+text-align: justify;"
+>Durante este trabajo yo me encargue acerca del diseño de personajes y lugares donde se desarrollan las capsulas, asi como en la escritura de guiones literarios y guiones tecnicos, tambien me enxargue de animaciones;
+edicion de video y audio, donde este ultimo yo le di voz a el personaje llamado "Koli" 
+</p>
+
+<div style="text-align: center;">
+    <video width="1000" height="600" controls>
+        <source src="Imagenes y videos/Capsula 1 - (1).mp4" type="video/mp4">
+    </video>
+</div>
+
+<div style="text-align: center;">
+    <video width="1000" height="600" controls>
+        <source src="Imagenes y videos/capsula 2.mp4" type="video/mp4">
+    </video>
+</div>
+
+<p
+style="font-family: Arial, Helvetica, sans-serif;
+text-align: justify;"
+>Al igual se creo un videojuego de plataforma convinado con uno de laberinto, donde el personaje principal "Koli" recolectaba distintos pergaminos que tenian informacion acerca del tema.
+</p>
+
+<p
+style="font-family: Arial, Helvetica, sans-serif;
+text-align: justify;"
+>Durante este videojuego estuve involugrado como diseñador del personaje y programador del videojuego, dandole comportamientos a las interaccion del personaje. 
+</p>
+
+<p
+style="font-family: Arial, Helvetica, sans-serif;
+text-align: justify;"
+>Te invito a jugar el videojuegoen el siguiente link: <strong><a href="https://gd.games/instant-builds/698fdad7-cb9f-4e15-9820-c4dafc0dc55a">AVENTURAS ACUATICAS DEL AxOLOTITO</a></strong>
+</p>
+
+<div style="text-align: left;" >
+    <img  
+    src="Imagenes y videos/capdevj1.png" width="600" height="400" alt="">
+</div>
+
+<div style="text-align: right;" >
+    <img  
+    src="Imagenes y videos/capdevj2.png" width="600" height="400" alt="">
+</div>
+
+<h2
+style="color: rgb(52, 17, 85);
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+text-align: center;"
+>Mi contacto</h2> 
+
+<p
+style="color: rgb(52, 17, 85);
+font-family: Arial, Helvetica, sans-serif;
+text-align: center;"
+>Correo electronico:</p>
+
+<p
+style="color: blueviolet;
+text-align: center;"
+>pabloalexanderaltamiranohernandez323@alumno.cch.unam.mx</p>
+
+<p
+style="color: rgb(52, 17, 85);
+font-family: Arial, Helvetica, sans-serif;
+text-align: center;"
+>Instagram:</p>
+
+<p
+style="color: blueviolet;
+text-align: center;
+">@pallmall_mp3      @wxo_mp3</p>
+
+
+
