--- a/index.html
+++ b/index.html
@@ -42,13 +42,17 @@
                 <article class="trabajo_article">
                     <h3>Proyecto 1</h3>
                     <p>Tambien en tematica a esto se realizaron dos pequeñas capsulas que ayudan a el reforzamiento y entendimiento del tema. Durante este trabajo yo me encargue acerca del diseño de personajes y lugares donde se desarrollan las capsulas, asi como en la escritura de guiones literarios y guiones técnicos, también me encargue de animaciones;
-                    edición de video y audio, donde este ultimo yo le di voz a el personaje llamado "Koli". 
+                    edición de video y audio, donde este ultimo yo le di voz a el personaje llamado "Koli". Te invito a que veas las capsulas en el siguiente link:
                     </p>
+                    <p>
+                        <strong><a href="https://youtu.be/_1Iomi1Z2Xo?si=g2ktTW_cFuYA0jg1">Ensayo Académico Capsula 1</a></strong> y <strong><a href="https://youtu.be/-OVB5Ws3TjU?si=HFZ0bQ8yJvV1UrE3">Ensayo Académico Capsula 2</a></strong></p>
                 </article class="trabajo_article">
                 <article>
                     <h3>Proyecto 2</h3>
                     <p>Al igual se creo un videojuego de plataforma combinado con uno de laberinto, donde el personaje principal "Koli" recolectaba distintos pergaminos que tenían información acerca del tema.
-                    Durante este videojuego estuve involucrado como diseñador del personaje y programador del videojuego, dándole comportamientos a las interacción del personaje. </p>
+                    Durante este videojuego estuve involucrado como diseñador del personaje y programador del videojuego, dándole comportamientos a las interacción del personaje. 
+                    Te invito a jugar el videojuegoen el siguiente link: <strong><a href="https://gd.games/instant-builds/698fdad7-cb9f-4e15-9820-c4dafc0dc55a">AVENTURAS ACUATICAS DEL AxOLOTITO</a></strong>
+                    </p>
                 </article>
             </div>
             
@@ -71,7 +75,7 @@
                       </svg>
                 </article>
                 <article class="contacto_foto">
-                    <img src="Imagenes y videos/mifoto.jpg" width="150 " alt="foto_perfil">
+                    <img src="Imagenes y videos/mifoto.jpg" width="250" alt="foto_perfil">
                 </article>
             </div>
         </section>
