--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 El cual también es un sitio con una temática representativa acerca del plantel Vallejo, como lo son los Ajolotes. Donde en el sitio un Ajolote llamado "Paki" es quien te guía a través de los textos de la explicación
                 del tema.
                 </p>
-                <div style="text-align: center;">
+                <div class="hero_imagen" style="text-align: center;">
                     <img src="Imagenes y videos/portada enca.jpg" width="1000" alt="portada">
                 </div>
             </article>
@@ -41,14 +41,18 @@
             <div class="trabajo_wropper">
                 <article class="trabajo_article">
                     <h3>Proyecto 1</h3>
+                    <div style="text-align: center;">
+                        <img src="Imagenes y videos/capvideo.png" alt="videojuego" width="450"></div>
                     <p>Tambien en tematica a esto se realizaron dos pequeñas capsulas que ayudan a el reforzamiento y entendimiento del tema. Durante este trabajo yo me encargue acerca del diseño de personajes y lugares donde se desarrollan las capsulas, asi como en la escritura de guiones literarios y guiones técnicos, también me encargue de animaciones;
                     edición de video y audio, donde este ultimo yo le di voz a el personaje llamado "Koli". Te invito a que veas las capsulas en el siguiente link:
                     </p>
                     <p>
                         <strong><a href="https://youtu.be/_1Iomi1Z2Xo?si=g2ktTW_cFuYA0jg1">Ensayo Académico Capsula 1</a></strong> y <strong><a href="https://youtu.be/-OVB5Ws3TjU?si=HFZ0bQ8yJvV1UrE3">Ensayo Académico Capsula 2</a></strong></p>
-                </article class="trabajo_article">
-                <article>
+                </article>
+                <article class="trabajo_article">
                     <h3>Proyecto 2</h3>
+                    <div style="text-align: center;">
+                        <img src="Imagenes y videos/capdevj1.png" alt="videojuego" width="500"></div>
                     <p>Al igual se creo un videojuego de plataforma combinado con uno de laberinto, donde el personaje principal "Koli" recolectaba distintos pergaminos que tenían información acerca del tema.
                     Durante este videojuego estuve involucrado como diseñador del personaje y programador del videojuego, dándole comportamientos a las interacción del personaje. 
                     Te invito a jugar el videojuegoen el siguiente link: <strong><a href="https://gd.games/instant-builds/698fdad7-cb9f-4e15-9820-c4dafc0dc55a">AVENTURAS ACUATICAS DEL AxOLOTITO</a></strong>
