--- a/Index.html
+++ b/Index.html
@@ -1,80 +1,70 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio</title>
     <link rel="stylesheet" type="text/css" href="Estilos.css">
 </head>
-
 <body>
-<centre><table width="1320" height="1220" border="0">
-    <tr>
-        <td width="60" height="100" align="center" bgcolor="#696876">
-            <a href="Carrera.html"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="80" fill="currentColor" class="bi bi-caret-right-square" viewBox="0 0 16 16">
-                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-                <path d="M5.795 12.456A.5.5 0 0 1 5.5 12V4a.5.5 0 0 1 .832-.374l4.5 4a.5.5 0 0 1 0 .748l-4.5 4a.5.5 0 0 1-.537.082"/>
-              </svg></a>
-        </td>
-        <td width="1260" valing="center" bgcolor="#90909E">
-            <h3>Navegaci&oacute;n</h3>
-            <center><p><a href="Carrera.html">La carrera que quiero estudiar</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="">Lo que hice este año escolar</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="">Pasatiempos</a></p></center>
-        </td>
-    </tr>
-    <tr>
-        <td width="60" height="800" rowspan="3" bgcolor="#90909E"></td>
-        <td width="1260" height="300" valign="center" bgcolor="#ADADB0">
-            <center><h1>Portafolio de mi persona</h1></center>
-            <h2>Resumen de mi persona</h2>
-            <div align="justify"><p>Me llamo Nataly Rosaly Arteaga Romero, tengo 18 años de edad y mi cumplaños es el 21 de febrero. Acabo de terminar el bachillerato y entrar&eacute; a la universidad en agosto, sin embargo, sigo<br>
-            estudiando en cursos que met&iacute; para entrar preparada a la universidad, estos cursos son de c&aacute;lculo, ingl&eacute;s y programaci&oacute;n. Soy una persona a la que le gusta explorar y aprender nuevas cosas, m&aacute;s las
-            que estan relacionadas con ingenier&iacute;a, la mayor&iacute;a del tiempo suelo estar haciendo cosas relacionadas con la escuela o bien con el estudio y en mis tiempos libres hago viajes cortos o simplemente
-            me quedo en casa viendo series o leyendo. Me encanta el caf&eacute; y escuchar m&uacute;sica, no soy mucho de deportes pero tambi&eacute;n me gustan.</p></div>
-        </td>
-    </tr>
-    <tr>
-        <td width="1260" height="500" bgcolor="#ADADB0">
-            <h2>Trabajos</h2>
-            <center><img src="/Imagenes/Mecatronica.jpeg" width="500" height="250" hspace="30" alt="Proyectos del Estudio T&eacute;cnico Epecializado de Mecatr&oacute;nica">
-                <span claid="capa1" style="position:absolute; left:200px; top:805px; width:500px; height:200px; visibility:visible">
-                        <div align="justify"><p class="capas"><b>Estudio T&eacute;cnico Epecializado de Mecatr&oacute;nica</b><br>
-                        En la imagen se muestran varios proyectos que realic&eacute; durante el año en que<br> 
-                        estuve en la carrera, entre ellos hay varios carros que funcionan con distintos<br>
-                        sensores como el digital o el de temperatura.</p></div>
-                </span>
-                <span id="capa2" style="position:absolute; left:730px; top:805px; width:500px; height:200px; visibility:visible">
-                        <div align="justify"><p class="capas"><b>Proyectos del Estudio T&eacute;cnico Epecializado de Sistemas Computacionales, Diseño de Aplicaciones Web y Base de Datos</b><br>
-                        En la imagen se muestran varias p&aacute;ginas que realic&eacute; durante el año en que
-                        estuve en la carrera, una de ellas esta hecha con puras capas, algunas otras tienen enlaces internos y externos, entre otras cosas.</p></div>
-                </span> 
-            <img src="/Imagenes/PaginasWeb.jpeg" width="500" height="250" alt="Proyectos del Estudio T&eacute;cnico Epecializado de Sistemas Computacionales, Diseño de Aplicaciones Web y Base de Datos">  
-        </center>    
-        </td>
-    </tr>
-    <tr>
-        <td width="1260" height="200" valign="center" bgcolor="#ADADB0">
-            <h2>Mi contacto</h2>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;natalyrosalyarteaga322@alumno.cch.unam.mx</p>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.facebook.com/nataly.romero.710667?mibextid=ZbWKwL"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="80" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-            </svg></a>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.instagram.com/nataly_rosaly?igsh=Mm9hNmsxcmZ3Y2Z3"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="80" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-                <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
-            </svg></a>
-            <span id="capa3" style="position:absolute; left:830px; top:927px; width:500px; height:200px; visibility:visible">
-              <img src="/Imagenes/Foto.jpeg" width="150" height="180">
-            </span>  
-        </td>
-    </tr>
-    <tr>
-        <td width="60" heigth="100" align="center" bgcolor="#696876"></td>
-        <td width="1260" valign="center" bgcolor="#90909E">
-            <center><p class="piedepagina">Universidad Nacional Aut&oacute;noma de M&eacute;xico</p>
-            <p class="piedepagina">Colegio de Ciencias y Humanidades</p>
-            <p class="piedepagina">2024</p></center>
-        </td>
-    </tr>
-
-</table></centre>
+    <header class="menu">
+        <span>Navegador</span>
+        <nav>
+            <ul class="menu_ul">
+                <a href="#Inicio"><li>Inicio</li></a>
+                <a href="#Trabajos"><li>Trabajo</li></a>
+                <a href="#Contacto"><li>Contacto</li></a>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="presentacion">
+            <a name="Inicio"><h1 class="presentacion_h1">Portafolio de Proyectos<span class="">Nataly Romero</span></h1></a>
+            <article class="presentacion_article">
+                <p>Me llamo Nataly Rosaly Arteaga Romero, tengo 18 años de edad y mi cumpleaños es el 21 de febrero. Acabo de terminar el bachillerato y entraré; a la universidad en agosto, 
+                sin embargo, sigo estudiando en cursos que metí; para entrar preparada a la universidad, estos cursos son de cálculo, inglés y programación. Soy una persona a la que le 
+                gusta explorar y aprender nuevas cosas, más las que están relacionadas con ingeniería, la mayoría del tiempo suelo estar haciendo cosas relacionadas con la escuela o bien 
+                con el estudio y en mis tiempos libres hago viajes cortos o simplemente me quedo en casa viendo series o leyendo. Me encanta el café; y escuchar música, no soy mucho de 
+                deportes pero también me gustan.</p>
+            </article>
+        </section>
+        <section class="trabajo">
+            <a name="Trabajos"><h2>Trabajos</h2></a>
+            <div class="trabajo_wrapper">
+                <article class="trabajo_article">
+                    <img width="300" height="150" src="Imagenes/Formulario.png" alt="Formulario">
+                    <h3>Proyecto 1</h3>
+                    <p>A final del primer semestre hice un formulario ocupando varios de los temas vistos, fue como
+                    una pequeña evaluación.</p>
+                </article>
+                <article class="trabajo_article">
+                    <img width="300" height="150" src="Imagenes/Pagina.png" alt="Página web">
+                    <h3>Proyecto 2</h3>
+                    <p>Como proyecto final realicé una página web con todos los temas vistos, el tema fue libre, así que
+                    la hice acerca del tema de las plantas para poder poner varias secciones.</p>
+                </article>
+            </div>
+        </section>
+        <section class="contacto">
+            <a name="Contacto"></a><h2>Mi contacto</h2><br></a>
+            <img class="foto"  height="250" src="Imagenes/Foto.jpeg">
+            <div class="contacto_wrapper">
+                <article class="contacto_article">
+                    <br><h3>Mi correo electrónico</h3>
+                    <p>natalyrosalyarteaga322@alumno.cch.unam.mx</p>
+                    <a href="https://www.instagram.com/nataly_rosaly?igsh=Mm9hNmsxcmZ3Y2Z3"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                        <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+                    </svg></a>
+                    <a href="https://www.facebook.com/nataly.romero.710667?mibextid=ZbWKwL"><svg class="icon" xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                        <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                    </svg></a>  
+                    
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer class="piepagina">
+        <p>Hecho por Nataly Rosaly Arteaga Romero</p>
+    </footer>
 </body>
 </html>
-
-
-
